--- a/src/Owin.WebSocket/Owin.WebSocket.nuspec
+++ b/src/Owin.WebSocket/Owin.WebSocket.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
-        <id>Owin.WebSocket</id>
-        <version>1.7.0</version>
+        <id>Owin.WebSocket.Fabrik</id>
+        <version>1.8.1</version>
         <title>Owin.WebSocket</title>
         <authors>Bryce Godfrey</authors>
         <owners>Bryce Godfrey</owners>
